<resources>
    <string name="app_name">FlexingFreeGames</string>

    <string name="text_description">Description</string>
    <string name="text_filters">Filters</string>
    <string name="text_hide">Hide</string>

    <string name="text_os">OS: %s</string>
    <string name="text_processor">Processor: %s</string>
    <string name="text_graphics">Graphics: %s</string>
    <string name="text_memory">Memory: %s</string>
    <string name="text_storage">Storage: %s</string>

    <string name="text_action_retry">Retry</string>
    <string name="text_action_search">Search</string>

    <string name="text_error_fetching">Error fetching data</string>
    <string name="text_error_no_bookmarks">No bookmarks were found</string>

    <string name="text_accessibility_thumb">Game thumbnail</string>
    <string name="text_accessibility_screenshot">Game screenshot</string>
    <string name="text_accessibility_previous">Previous screenshot</string>
    <string name="text_accessibility_next">Next screenshot</string>
    <string name="text_accessibility_freetogame">Go to FreeToGame.com</string>
    <string name="text_accessibility_game_url">Go to the game\'s store page</string>
    <string name="text_accessibility_bookmark">Bookmark game</string>

    <string name="hint_platform">Platform</string>
    <string name="hint_category">Category</string>
    <string name="hint_sort_by">Sort by</string>

    <string name="nav_browse">Browse</string>
    <string name="nav_bookmarks">Bookmarks</string>
    <string name="nav_details">Details</string>
    
    <string-array name="platforms">
        <item>All</item>
        <item>PC</item>
        <item>Browser</item>
    </string-array>

    <string-array name="sort_types">
        <item>Release-date</item>
        <item>Popularity</item>
        <item>Alphabetical</item>
        <item>Relevance</item>
    </string-array>
    
    <string-array name="categories">
        <item>All</item>
        <item>MMORPG</item>
        <item>Shooter</item>
        <item>Strategy</item>
        <item>Moba</item>
        <item>Racing</item>
        <item>Sports</item>
        <item>Social</item>
        <item>Sandbox</item>
        <item>Open-world</item>
        <item>Survival</item>
        <item>PVP</item>
        <item>PVE</item>
        <item>Pixel</item>
        <item>Voxel</item>
        <item>Zombie</item>
        <item>Turn-based</item>
        <item>First-person</item>
        <item>Third-person</item>
        <item>Top-down</item>
        <item>Tank</item>
        <item>Space</item>
        <item>Sailing</item>
        <item>Side-scroller</item>
        <item>Superhero</item>
        <item>Permadeath</item>
        <item>Card</item>
        <item>Battle-royale</item>
        <item>MMO</item>
        <item>MMOFPS</item>
        <item>MMOTPS</item>
        <item>3D</item>
        <item>2D</item>
        <item>Anime</item>
        <item>Fantasy</item>
        <item>Sci-Fi</item>
        <item>Fighting</item>
        <item>Action-RPG</item>
        <item>Action</item>
        <item>Military</item>
        <item>Martial-arts</item>
        <item>Flight</item>
        <item>Low-spec</item>
        <item>Tower-defense</item>
        <item>Horror</item>
        <item>MMORTS</item>
    </string-array>
</resources>